Fixed gradle for production

--- a/android/YoPme/gradle.properties
+++ b/android/YoPme/gradle.properties
@@ -1,4 +1,4 @@
 propVersionCode=1
 propVersionName=1.0.0
 propApkName=YoPMe_mobile_maps
-propNdkFlags=V=0 NDK_DEBUG=0
+propNdkFlags=V=0 NDK_DEBUG=0 PRODUCTION=1
