--- a/android/build.gradle
+++ b/android/build.gradle
@@ -158,6 +158,14 @@ android {
       // Change it in the next version after publishing app to the store.
       buildConfigField 'int', 'RATING_THRESHOLD', '6'
     }
+
+    moboMarket {
+      versionName = android.defaultConfig.versionName + '-MoboMarket'
+      android.sourceSets.moboMarket.assets.srcDirs = ['flavors/mwm-ttf-assets']
+      // TODO While store url is unknown, force all rating reviews to be sent to our email.
+      // Change it in the next version after publishing app to the store.
+      buildConfigField 'int', 'RATING_THRESHOLD', '6'
+    }
   }
 
   // Currently (as of 1.2.3 gradle plugin) ABI filters aren't supported inside of product flavors, so we cannot generate splitted builds only for Google build.
@@ -244,7 +252,6 @@ android {
   }
 }
 
-import com.android.build.OutputFile
 project.ext.versionCodes = ['armeabi-v7a':1, 'x86':2]
 
 android.applicationVariants.all { variant ->
