[Routing] fake graph tests.

--- a/routing/routing_benchmarks/CMakeLists.txt
+++ b/routing/routing_benchmarks/CMakeLists.txt
@@ -6,6 +6,7 @@ set(
   ../routing_integration_tests/routing_test_tools.hpp
   bicycle_routing_tests.cpp
   car_routing_tests.cpp
+  fake_graph_tests.cpp
   helpers.cpp
   helpers.hpp
   pedestrian_routing_tests.cpp
