[drape][geometry] Isolines smoothing.

--- a/geometry/CMakeLists.txt
+++ b/geometry/CMakeLists.txt
@@ -55,6 +55,8 @@ set(
   segment2d.cpp
   segment2d.hpp
   simplification.hpp
+  smoothing.cpp
+  smoothing.hpp
   spline.cpp
   spline.hpp
   transformations.hpp
